--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.8",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
