--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-awesome-reveal": "^4.2.8",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
